--- a/pages/work-enironment/SO/Lubuntu/index.html
+++ b/pages/work-enironment/SO/Lubuntu/index.html
@@ -64,7 +64,7 @@
 
             <hr>
 
-            <h2 id="1 OpenBox Config">Configuración de OpenBox</h2>
+            <h2 id="1 OpenBox Config">1 Configuración de OpenBox</h2>
             <p>
 				Vamos a añadir los atajos de teclado que queremos que nuestro WM (OpenBox) utilice. Para ello tendremos que abrir y editar el archivo de configuración de openbox <code>$HOME/.config/openbox/rc.xml</code>
             </p>
