--- a/pages/work-enironment/SO/Lubuntu/index.html
+++ b/pages/work-enironment/SO/Lubuntu/index.html
@@ -52,7 +52,7 @@
 
             <h2 id="intro">Intro</h2>
             <p>
-                Objetivo: Conseguir que el desktop environment de Lubuntu (LXQT / OpenBox) cumpla ciertas funcionalidades quasi de un tiling window manager (WM).
+                <b>Objetivo</b>: Conseguir que el desktop environment de Lubuntu (LXQT / OpenBox) cumpla ciertas funcionalidades quasi de un tiling window manager (WM).
             </p>
             <p>
 		Lubuntu utiliza como desktop environment LXQT y este a su vez utiliza OpenBox como window manager. No obstante, OpenBox es un floating WM (de esos a los que estamos acostumbrados donde puedes arrastrar las ventanas y redimensionarlas con el ratón colocándolas donde te apetezca), en lugar de un tiling WM (los cuales reubican las ventanas para aprovechar el espacio de la pantalla al máximo y se operan con el teclado en lugar de con el ratón).
