--- a/pages/work-enironment/codium-extensions/index.html
+++ b/pages/work-enironment/codium-extensions/index.html
@@ -51,7 +51,7 @@
 
             <h2 id="intro">Intro</h2>
 				<p>
-					<b>Objetivo</b>>: Utilizar la fuente de las extensiones de VS Code (Visual Studio Code) en VSCodium (Codium) para poder acceder a todas las extensiones.
+					<b>Objetivo</b>: Utilizar la fuente de las extensiones de VS Code (Visual Studio Code) en VSCodium (Codium) para poder acceder a todas las extensiones.
 				</p>
 				<p>
 					Suelo hacer pequeños programitas para microcontroladores (placas arduino y ESP principalmente), y el arduino IDE no es mi editor favorito…
@@ -197,71 +197,7 @@
 
 
 
-
-
-
-			<h3 id="1.4 Apps habituales">1.4 Apps habituales</h3>
-
-				<p>
-					Algunos keybindings para aplicaciones recurrentes
-				</p>
-
-				<pre>
-					<code>
-&lt;!--# key shortcuts for apps--&gt;
-&lt;!--# Terminal--&gt;
-&lt;keybind key="W-Return"&gt;  
-	&lt;action name="Execute"&gt;    
-		&lt;command&gt;qterminal&lt;/command&gt;  
-	&lt;/action&gt;
-&lt;/keybind&gt;
-&lt;!--# Browser private window--&gt;
-&lt;keybind key="W-S-b"&gt;  
-	&lt;action name="Execute"&gt;    
-		&lt;command&gt;firefox --private-window&lt;/command&gt;  
-	&lt;/action&gt;
-&lt;/keybind&gt;
-&lt;!--# Browser window--&gt;
-&lt;keybind key="W-b"&gt;  
-	&lt;action name="Execute"&gt;    
-		&lt;command&gt;firefox&lt;/command&gt;  
-	&lt;/action&gt;
-&lt;/keybind&gt;
-&lt;!--# File manager--&gt;
-&lt;keybind key="W-f"&gt;  
-	&lt;action name="Execute"&gt;    
-		&lt;command&gt;pcmanfm-qt&lt;/command&gt;  
-	&lt;/action&gt;
-&lt;/keybind&gt;
-&lt;/keyboard&gt;
-					</code>
-				</pre>
-
-
-
-            <h2 id="apartado2">Apartado 2</h2>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <h2 id="apartado3">Apartado 3</h2>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
+       
         </article>
 
         
