--- a/pages/work-enironment/SO/Lubuntu/index.html
+++ b/pages/work-enironment/SO/Lubuntu/index.html
@@ -31,7 +31,7 @@
         <div class="menu">
             <ul>
                 <li><a href="#intro">Introducción</a></li>
-                <li><a href="#1 OpenBox Config">1 OpenBox Config</a></li>
+                <li><a href="#1. OpenBox Config">1. OpenBox Config</a></li>
 					<li><a href="#1.1 Escritorios virtuales">1.1 Escritorios virtuales</a></li>
 					<li><a href="#1.2 Tiling like">1.2 Tiling like</a></li>
 					<li><a href="#1.3 Movimiento de ventanas">1.3 Movimiento de ventanas</a></li>
@@ -64,7 +64,7 @@
 
             <hr>
 
-            <h2 id="1 OpenBox Config">1 Configuración de OpenBox</h2>
+            <h2 id="1. OpenBox Config">1. Configuración de OpenBox</h2>
             <p>
 				Vamos a añadir los atajos de teclado que queremos que nuestro WM (OpenBox) utilice. Para ello tendremos que abrir y editar el archivo de configuración de openbox <code>$HOME/.config/openbox/rc.xml</code>
             </p>
