--- a/pages/work-enironment/codium-extensions/index.html
+++ b/pages/work-enironment/codium-extensions/index.html
@@ -31,10 +31,10 @@
         <div class="menu">
             <ul>
                 <li><a href="#intro">Intro</a></li>
-                <li><a href="#1 Diferencia entre extensiones">Diferencia entre extensiones</a></li>
-				<li><a href="#2 Extensiones VSCode en Codium">2 Extensiones VSCode en Codium</a></li>
+                <li><a href="#1. Diferencia entre extensiones">1. Diferencia entre extensiones</a></li>
+				<li><a href="#2. Extensiones VSCode en Codium">2. Extensiones VSCode en Codium</a></li>
 					<li><a href="#2.1 Sustituir marketplace de Codium">2.1 Sustituir marketplace de Codium</a></li>
-                <li><a href="#3 ¿Otra alternativa? Archivos .vsix">3 ¿Otra alternativa? Archivos .vsix</a></li>
+                <li><a href="#3. ¿Otra alternativa? Archivos .vsix">3. ¿Otra alternativa? Archivos .vsix</a></li>
             </ul>    
         </div>
 
@@ -72,7 +72,7 @@
             <hr>
 
 
-            <h2 id="1 Diferencia entre extensiones">Diferencia entre extensiones</h2>
+            <h2 id="1. Diferencia entre extensiones">Diferencia entre extensiones</h2>
 				<p>
 					¿Por qué VSCode y Codium no tienen las mismas extensiones?
 				</p>
@@ -90,10 +90,11 @@
 				</p>
 
 				<img src="images/extension_not_found.png" alt="VSCode extension not found in Codium">
+				<br>
 
 
             
-            <h2 id="2 Extensiones VSCode en Codium">2 Extensiones VSCode en Codium</h2>
+            <h2 id="2. Extensiones VSCode en Codium">2 Extensiones VSCode en Codium</h2>
 
 				<p>
 					¿Cómo podemos hacer para tener las extensiones de VSCode en Codium?
@@ -160,9 +161,10 @@
 					</p>
 
 					<img src="images/extension_found.png" alt="VSCode extension found in Codium">
+					<br>
 
 
-			<h2 id="3 ¿Otra alternativa? Archivos .vsix">3 ¿Otra alternativa? Archivos .vsix</h2>
+			<h2 id="3. ¿Otra alternativa? Archivos .vsix">3 ¿Otra alternativa? Archivos .vsix</h2>
 
 				<p>
 					Hay otra opción para instalar extensiones que no están en el marketplace de Codium en Codium sin cambiar el marketplace.
