--- a/pages/work-enironment/codium-extensions/index.html
+++ b/pages/work-enironment/codium-extensions/index.html
@@ -72,7 +72,7 @@
             <hr>
 
 
-            <h2 id="1. Diferencia entre extensiones">Diferencia entre extensiones</h2>
+            <h2 id="1. Diferencia entre extensiones">1. Diferencia entre extensiones</h2>
 				<p>
 					¿Por qué VSCode y Codium no tienen las mismas extensiones?
 				</p>
@@ -94,7 +94,7 @@
 
 
             
-            <h2 id="2. Extensiones VSCode en Codium">2 Extensiones VSCode en Codium</h2>
+            <h2 id="2. Extensiones VSCode en Codium">2. Extensiones VSCode en Codium</h2>
 
 				<p>
 					¿Cómo podemos hacer para tener las extensiones de VSCode en Codium?
@@ -164,7 +164,7 @@
 					<br>
 
 
-			<h2 id="3. ¿Otra alternativa? Archivos .vsix">3 ¿Otra alternativa? Archivos .vsix</h2>
+			<h2 id="3. ¿Otra alternativa? Archivos .vsix">3. ¿Otra alternativa? Archivos .vsix</h2>
 
 				<p>
 					Hay otra opción para instalar extensiones que no están en el marketplace de Codium en Codium sin cambiar el marketplace.
