--- a/pages/work-environment/SO/Lubuntu/index.html
+++ b/pages/work-environment/SO/Lubuntu/index.html
@@ -126,7 +126,7 @@
 				</pre>
 			
 			
-			<h3 id="1.2 Tiling like">1.2 Tilink like</h3>
+			<h3 id="1.2 Tiling like">1.2 Tiling like</h3>
 			
 				<p>
 					Usar tecla <code>"Control" + "Super" + "V"</code> para dividir verticalmente la pantalla con las 2 últimas ventanas más recientes
