landing page small style mod

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <header class="header-container">
             <div class="header-leftbar">
                 <div class="header-logo">
-                    <div class="halo"></div>
-                    <div class="text">fm</div>
+                    <div class="header-halo"></div>
+                    <div class="header-text">fm</div>
                 </div>
                 <div class="header-searchbar">
                     <form action="/action_page.php" class="search-box">
